--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,39 @@ html {
 body {
   margin:  0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;  
+}
+
+/* ------------elements-------------------- */
+
+.starting-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: darkolivegreen;
+  height: 100vh;
 }
 
 
+h1.game-title {
+  font-size: 80px;
+  text-align: center;
+  color: rgb(20, 20, 20);
+  text-shadow: 2px 2px 2px grey;
+
+}
+
+button.play-button {
+  padding: 10px 30px;
+  font-size: 36px;
+  background-color: aqua;
+  color: brown;
+  font-weight: bold;
+  text-shadow: 2px -2px 2px black;
+  border-radius: 10px;
+  width: 20%;
+}
+canvas {
+  background-color: red;
+}
