--- a/styles.css
+++ b/styles.css
@@ -19,31 +19,53 @@ body {
 .screen {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   background-color: darkolivegreen;
   height: 100vh;
+  background-image: url(pics/mole.png);
+  background-repeat: no-repeat;
+  background-position: 50% 45%;
+  background-size: 20%;
 }
 
 
+/* .screen {
+  background-image: url(pics/mole.png);
+  background-repeat: no-repeat;
+  background-position: 90% 5%;
+  background-size: 20%;
+  
+} */
+
+
 h1.game-title {
+  margin-bottom: 100px;
   font-size: 80px;
   text-align: center;
   color: rgb(20, 20, 20);
   text-shadow: 2px 2px 2px grey;
 
 }
+#instructions {
+  font-weight: 300;
+  font-size: 30px;
+  text-align: center;
+  color: rgb(20, 20, 20);
+  text-shadow: 2px 2px 2px grey;
+}
 
 .button {
   padding: 10px 30px;
   font-size: 36px;
-  background-color: aqua;
-  color: brown;
+  background-color:rgb(37%, 3%, 3%);
+  color: rgb(200, 200, 200);
   font-weight: bold;
   text-shadow: 2px -2px 2px black;
   border-radius: 10px;
   width: 40%;
 }
 canvas {
-  background-color:lightcoral;
+  background-image: url(pics/Phoenix_Lidar_Laser_Movie.gif);
+  border: 10px solid rgb(94, 8, 8);
 }
